--- a/Procedural/css/style.css
+++ b/Procedural/css/style.css
@@ -3,15 +3,14 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #1f2e59;
+    background-image: url("../img/violeta.jpg");
+    font-family: 'Roboto', sans-serif;
 }
-
 
 .caixa{
     position: absolute;
-    background-color: rgb(73, 85, 126);
-    max-width: 400px;
+    background-color: transparent;
+    max-width: 450px;
     width: 100%;
     padding: 30px;
     padding-bottom: 0px;
@@ -19,15 +18,16 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    border-color: lightgray;
-    border-style:dashed;
+    border: 2px solid #8a2be2;
+    border-radius: 15px;
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ */
+    backdrop-filter: blur(5px); /* Chrome and Opera */    
 }
 
 .caixa h1{
-    color:rgb(19, 18, 18);
+    color: #FFF;
     text-transform: uppercase;
-    font-weight: 500;
-    
+    font-weight: 500;   
 }
 
 .caixa input[type = "text"], .caixa input[type = "password"]{
@@ -36,9 +36,9 @@ body{
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid blueviolet;
-    padding: 14px 10px;
-    max-width: 200px;
+    border: 2px solid #8A2BE2;
+    padding: 24px 10px;
+    max-width: 300px;
     width: 100%;
     outline: none;
     color: rgb(14, 21, 22);
@@ -47,47 +47,78 @@ body{
 }
 
 .caixa input[type = "text"]:focus, .caixa input[type = "password"]:focus{
-    max-width: 280px;
+    max-width: 480px;
     width: 100%;
     border: 2px solid purple;
 }
 
 .caixa button{
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid purple;
-    padding: 14px 40px;
+    display: inline-block;
+    background-color: #8A2BE2;
+    color: #FFF;
+    text-transform: uppercase;
+    width: 200px;
+    height: 55px;
+    padding: 12px 20px;
+    border-radius: 20px;
+    border: 2px solid #8A2BE2;
     outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
-    cursor: pointer;
+    transition: .5s;
 }
 
 .caixa button:hover{
-    background: purple;
+    background: transparent;
 }
 
-.caixa button#criar{
-    border: 0;
-    background: none;
+.main-btn {
+    display: inline-block;
+    background-color: transparent;
+    color: #FFF;
+    text-transform: uppercase;
+    width: 200px;
+    height: 55px;
+    padding: 12px 20px;
+    border-radius: 20px;
+    border: 2px solid #8A2BE2;
+    outline: none;
+    transition: .5s;
+}
+
+.main-btn:focus{
+    outline: none;
+}
+
+.main-btn:hover {
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.caixa a#criar{
     display: block;
     margin: 20px auto;
     text-align: center;
     border: 2px solid rgb(11, 180, 129);
-    padding: 14px 40px;
+    background-color: rgb(11, 180, 129);
     outline: none;
     color: white;
-    border-radius: 24px;
-    transition: 0.25s;
     cursor: pointer;
 }
 
-.caixa button#criar:hover{
-    background: rgb(11, 180, 129);
+.caixa a#gerenciar{
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #9400D3;
+    background-color: #9400D3;
+    outline: none;
+    color: white;
+}
+
+.caixa a#gerenciar:hover{
+    background: transparent;
+}
+.caixa a#criar:hover{
+    background: transparent;
 }
 
 li{
@@ -95,7 +126,7 @@ li{
     display: block;
     background-color: rgba(186, 90, 90, 0.569);
     color: rgb(164, 0, 0);
-    top: 95%;
+    top: 97%;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 5px 5px 5px 5px;
@@ -106,7 +137,7 @@ h6{
     display: block;
     background-color: rgba(31, 234, 234, 0.812);
     color: rgb(0, 0, 0);
-    top: 90%;
+    top: 97%;
     left: 50%;
     transform: translate(-50%,-50%);    
     padding: 5px 5px 5px 5px;
