--- a/PDO/css/Home.css
+++ b/PDO/css/Home.css
@@ -3,13 +3,13 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #1f2e59;
+    background-image: url("../img/violeta.jpg");
+    font-family: 'Roboto', sans-serif;
 }
 
 #divi{
     position: absolute;
-    background-color: rgb(73, 85, 126);
+    background-color: transparent;
     max-width: 800px;
     width: 100%;
     padding: 50px;
@@ -17,26 +17,14 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    border-color: lightgray;
-    border-style:dashed;
-}
-
-#divi a#sair{
-    position: absolute;
-    color: white;
-    top: 87%;
-    left: 48%;
-    text-decoration: none;
-    display: block;
-    font-size: 20pt;
-}
-
-#divi a#sair:hover{
-    color: black;
+    border: 2px solid #8a2be2;
+    border-radius: 15px;
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ */
+    backdrop-filter: blur(5px); /* Chrome and Opera */  
 }
 
 #divi h1{
-    color:rgb(0, 0, 0);
+    color:rgb(212, 200, 200);
     font-weight: 500;
     font-size: 35pt;
     text-align: center;
@@ -45,6 +33,7 @@ body{
 }
 
 #divi h3#txt1{
+    color: rgb(185, 178, 178);
     font-weight: bold;
     margin: 0px;
     padding: 0px;
@@ -55,6 +44,7 @@ body{
 }
 
 #divi h3#txt2{
+    color: rgb(185, 178, 178);
     max-width: 450px;
     width: 45%;
     font-weight: bold;
@@ -64,7 +54,7 @@ body{
 }
 
 #divi button#btn1{
-    background: none;
+    background: rgb(72, 205, 217);
     display: block;
     position: absolute;
     top: 65%;
@@ -78,14 +68,15 @@ body{
     cursor: pointer;
     width: 120px;
     height: 30px;
+    text-transform: uppercase;
 }
 
 #divi button#btn1:hover{
-    background: rgb(72, 205, 217);
+    background: transparent;
 }
 
 #divi button#btn2{
-    background: none;
+    background: rgb(205, 50, 50);
     display: block;
     position: absolute;
     top: 65%;
@@ -99,9 +90,37 @@ body{
     cursor: pointer;
     width: 120px;
     height: 30px;
+    text-transform: uppercase;
 }
 
 #divi button#btn2:hover{
-    background: rgb(205, 50, 50);
+    background: transparent;
 }
 
+.main-btn {
+    display: block;
+    background-color: #8A2BE2;
+    color: #FFF;
+    text-transform: uppercase;
+    width: 70px;
+    height: 23px;
+    padding: 10px 20px;
+    border-radius: 24px;
+    border: 2px solid #8A2BE2;
+    outline: none;
+    transition: .5s;
+    padding-bottom: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -40px;
+    text-decoration: transparent;
+}
+
+.main-btn:focus{
+    outline: none;
+}
+
+.main-btn:hover {
+    text-decoration: none;
+    background-color: transparent;
+}
