--- a/PDO/css/atualizar.css
+++ b/PDO/css/atualizar.css
@@ -3,13 +3,13 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #1f2e59;
+    background-image: url("../img/violeta.jpg");
+    font-family: 'Roboto', sans-serif;
 }
 
 .atualiza{
     position: absolute;
-    background-color: rgb(73, 85, 126);
+    background-color: transparent;
     max-width: 400px;
     width: 100%;
     padding: 40px;
@@ -17,12 +17,14 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    border-color: lightgray;
-    border-style:dashed;
+    border: 2px solid #8a2be2;
+    border-radius: 15px;
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ */
+    backdrop-filter: blur(5px); /* Chrome and Opera */  
 }
 
 .atualiza h1{
-    color:rgb(19, 18, 18);
+    color:rgb(212, 200, 200);
     text-transform: uppercase;
     font-weight: 500;
     
@@ -52,7 +54,7 @@ body{
 
 .atualiza button{
     border: 0;
-    background: none;
+    background: purple;
     display: block;
     margin: 20px auto;
     text-align: center;
@@ -61,10 +63,40 @@ body{
     outline: none;
     color: white;
     border-radius: 24px;
-    transition: 0.25s;
+    transition: 0.5s;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 .atualiza button:hover{
-    background: purple;
+    background: transparent;
+}
+
+.main-btn {
+    display: block;
+    background-color: #8A2BE2;
+    color: #FFF;
+    text-transform: uppercase;
+    width: 110px;
+    height: 23px;
+    padding: 10px 20px;
+    border-radius: 24px;
+    border: 2px solid #8A2BE2;
+    outline: none;
+    transition: .5s;
+    padding-bottom: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -30px;
+    text-decoration: transparent;
+    font-size: 15px;
+}
+
+.main-btn:focus{
+    outline: none;
+}
+
+.main-btn:hover {
+    text-decoration: none;
+    background-color: transparent;
 }
