--- a/Procedural/css/consulta.css
+++ b/Procedural/css/consulta.css
@@ -3,13 +3,13 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #1f2e59;
+    background-image: url("../img/violeta.jpg");
+    font-family: 'Roboto', sans-serif;
 }
 
 .tela{
     position: absolute;
-    background-color: rgb(73, 85, 126);
+    background-color: transparent;
     max-width: 400px;
     width: 100%;
     padding: 30px;
@@ -18,12 +18,14 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    border-color: lightgray;
-    border-style:dashed;
+    border: 2px solid #8a2be2;
+    border-radius: 15px;
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ */
+    backdrop-filter: blur(5px); /* Chrome and Opera */  
 }
 
 .tela h1{
-    color:rgb(19, 18, 18);
+    color: #FFF;
     text-transform: uppercase;
     font-weight: 500;
     
@@ -53,25 +55,49 @@ body{
 
 .tela button{
     border: 0;
-    background: none;
+    background: rgb(0, 38, 128);
     display: block;
     margin: 20px auto;
+    text-transform: uppercase;
     text-align: center;
     border: 2px solid rgb(0, 38, 128);
     padding: 14px 40px;
     outline: none;
     color: white;
     border-radius: 24px;
-    transition: 0.25s;
+    transition: 0.5s;
     cursor: pointer;
 }
 
 .tela button:hover{
-    background: rgb(0, 38, 128);
+    background: transparent;
 }
 
-.tela a{
+ .main-btn {
+    display: block;
+    background-color: #8A2BE2;
+    color: white;
+    text-transform: uppercase;
+    width: 97px;
+    height: 26px;
+    padding: 14px 16px;
+    border-radius: 24px;
+    border: 2px solid #8A2BE2;
+    outline: none;
     text-decoration: none;
-    color: black;
-    font-weight: bold;
+    transition: .5s;
+    padding-bottom: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.main-btn:focus{
+    outline: none;
+}
+
+.main-btn:hover {
+    text-decoration: none;
+    background-color: transparent;
 }
