--- a/Procedural/css/deletar.css
+++ b/Procedural/css/deletar.css
@@ -3,13 +3,13 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #1f2e59;
+    background-image: url("../img/violeta.jpg");
+    font-family: 'Roboto', sans-serif;
 }
 
 .deleta{
     position: absolute;
-    background-color: rgb(73, 85, 126);
+    background-color: transparent;
     max-width: 520px;
     width: 100%;
     padding: 50px;
@@ -17,12 +17,14 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    border-color: lightgray;
-    border-style:dashed;
+    border: 2px solid #8a2be2;
+    border-radius: 15px;
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ */
+    backdrop-filter: blur(5px); /* Chrome and Opera */  
 }
 
 .deleta h1{
-    color:rgb(0, 0, 0);
+    color:rgb(212, 200, 200);
     font-weight: 500;
     font-size: 35pt;
     text-align: center;
@@ -31,6 +33,7 @@ body{
 }
 
 .deleta h2{
+    color: rgb(185, 178, 178);
     font-weight: bold;
     margin: 0px;
     padding: 0px;
@@ -39,11 +42,11 @@ body{
 }
 
 .deleta button#btns{
-    background: none;
+    background: rgb(72, 205, 217);
     display: block;
     position: absolute;
     top: 70%;
-    left: 40%;
+    left: 37%;
     text-align: center;
     border: 2px solid rgb(72, 205, 217);
     outline: none;
@@ -51,20 +54,21 @@ body{
     border-radius: 24px;
     transition: 0.25s;
     cursor: pointer;
-    width: 120px;
+    width: 150px;
     height: 30px;
+    text-transform: uppercase;
 }
 
 .deleta button#btns:hover{
-    background: rgb(72, 205, 217);
+    background: transparent;
 }
 
 .deleta button#btnn{
-    background: none;
+    background: rgb(205, 50, 50);
     display: block;
     position: absolute;
     top: 85%;
-    left: 40%;
+    left: 37%;
     text-align: center;
     border: 2px solid rgb(205, 50, 50);
     outline: none;
@@ -72,11 +76,12 @@ body{
     border-radius: 24px;
     transition: 0.25s;
     cursor: pointer;
-    width: 120px;
+    width: 150px;
     height: 30px;
+    text-transform: uppercase;
 }
 
 .deleta button#btnn:hover{
-    background: rgb(205, 50, 50);
+    background: transparent;
 }
 
